INCLUDES = -I.. $(SDL_INCLUDES) $(INCDIRS) $(WINDOWING_SYSTEM) $(DEBUG_FLAGS) $(CPPFLAGS)

noinst_LTLIBRARIES = libu7file.la

libu7file_la_SOURCES =	\
	Flat.cc		\
	Flat.h		\
	Flex.cc		\
	Flex.h		\
	Table.cc	\
	Table.h		\
	common_types.h	\
	IFF.cc		\
	IFF.h		\
	U7file.cc	\
	U7file.h	\
	utils.cc	\
	utils.h		\
	databuf.h

EXTRA_DIST = 		\
	README

CLEANFILES = *~
