INCLUDES = -I.. -I../files -I../imagewin -I../audio -I../conf $(SDL_INCLUDES) $(INCDIRS) $(WINDOWING_SYSTEM) $(DEBUG_FLAGS) $(CPPFLAGS)

noinst_LTLIBRARIES = libgumps.la

libgumps_la_SOURCES = \
	Actor_gump.cc	\
	Actor_gump.h	\
	Book_gump.cc	\
	Book_gump.h	\
	File_gump.cc	\
	File_gump.h	\
	Gump.cc	\
	Gump.h	\
	Gump_button.cc	\
	Gump_button.h	\
	gump_utils.cc	\
	gump_utils.h	\
	Gump_widget.cc	\
	Gump_widget.h	\
	misc_buttons.cc	\
	misc_buttons.h	\
	Modal_gump.h	\
	Paperdoll_gump.cc	\
	Paperdoll_gump.h	\
	Scroll_gump.cc	\
	Scroll_gump.h	\
	Sign_gump.cc	\
	Sign_gump.h	\
	Slider_gump.cc	\
	Slider_gump.h	\
	Spellbook_gump.cc	\
	Spellbook_gump.h	\
	Stats_gump.cc	\
	Stats_gump.h	\
	Text_gump.cc	\
	Text_gump.h	\
	Yesno_gump.cc	\
	Yesno_gump.h
