INCLUDES = -I$(srcdir)/../headers -I$(srcdir)/.. -I$(srcdir)/../files $(SDL_CFLAGS) $(INCDIRS) $(WINDOWING_SYSTEM) \
		$(DEBUG_FLAGS) $(CPPFLAGS)

noinst_LTLIBRARIES = libimagewin.la

libimagewin_la_SOURCES = \
	ibuf16.cc \
	ibuf16.h \
	ibuf8.cc \
	ibuf8.h \
	imagebuf.cc \
	imagebuf.h \
	imagewin.cc \
	imagewin.h \
	iwin8.cc \
	iwin8.h \
	savepcx.cc \
	manip.h \
	scale_gl.cc \
	scale_2x.cc \
	scale_2x.h \
	scale_bilinear.cc \
	scale_bilinear.h \
	scale_hq2x.cc \
	scale_hq2x.h \
	scale_hq3x.cc \
	scale_hq3x.h \
	scale_hqnx.h \
	scale_interlace.cc \
	scale_interlace.h \
	scale_point.cc \
	scale_point.h \
	scale_2xSaI.cc \
	scale_2xSaI.h
EXTRA_DIST =
