INCLUDES = -I.. -I../imagewin -I../shapes -I../pathfinder -I../files \
		-I../audio -I../usecode $(SDL_INCLUDES) \
		$(INCDIRS) $(WINDOWING_SYSTEM) $(DEBUG_FLAGS) $(CPPFLAGS)

noinst_LTLIBRARIES = libobjs.la

libobjs_la_SOURCES = \
	animate.cc \
	animate.h \
	barge.cc \
	barge.h \
	chunks.cc \
	chunks.h \
	citerate.h \
	contain.cc \
	contain.h \
	egg.cc \
	egg.h \
	iregobjs.cc \
	iregobjs.h \
	objiter.h \
	objs.cc \
	objs.h \
	ordinfo.h \
	spellbook.cc \
	spellbook.h \
	virstone.cc \
	virstone.h

CLEANFILES = *~
