INCLUDES = -I$(srcdir)/../headers -I$(srcdir)/.. -I$(srcdir)/../files -I$(srcdir)/../imagewin -I$(srcdir)/../audio \
	-I$(srcdir)/../data -I$(srcdir)/../usecode -I$(srcdir)/../objs $(SDL_CFLAGS) $(FREETYPE2_INCLUDES) \
	$(INCDIRS) $(WINDOWING_SYSTEM) $(DEBUG_FLAGS) $(CPPFLAGS)

noinst_LTLIBRARIES = libshapes.la

libshapes_la_SOURCES = \
	font.cc \
	font.h \
	fontgen.cc \
	fontgen.h \
	fontvga.cc \
	fontvga.h \
	glshape.cc \
	glshape.h \
	items.cc \
	items.h \
	miscinf.cc \
	miscinf.h \
	pngio.cc \
	pngio.h \
	shapeinf.cc \
	shapeinf.h \
	shapevga.cc \
	shapevga.h \
	shapewrite.cc \
	u7drag.cc \
	u7drag.h \
	vgafile.cc \
	vgafile.h	\
	ammoinf.cc	\
	ammoinf.h	\
	aniinf.cc	\
	aniinf.h	\
	armorinf.cc	\
	armorinf.h	\
	bodyinf.cc	\
	bodyinf.h	\
	continf.cc	\
	continf.h	\
	effhpinf.cc	\
	effhpinf.h	\
	expinf.cc	\
	expinf.h	\
	frnameinf.cc	\
	frnameinf.h	\
	monstinf.cc	\
	monstinf.h	\
	npcdollinf.cc	\
	npcdollinf.h	\
	objdollinf.cc	\
	objdollinf.h	\
	sfxinf.cc	\
	sfxinf.h	\
	warminf.cc	\
	warminf.h	\
	weaponinf.cc	\
	weaponinf.h

CLEANFILES = *~

